--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<div class="inner">
 								<!-- Here is a heading where you can put your name -->
 								<h1>
-									MacKenzie Warren
+									Ke Wang
 								</h1>
 								<!-- 	Here is an image where you can put a picture of you.
 									You can change the width and height attributes below to change how large
@@ -63,7 +63,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									NSF Astronomy & Astrophysics Postdoctoral Fellow <br> North Carolina State University <br> Michigan State University
+									University of Southern California <br> Nanjing Agricultural University
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
