--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									another List Item with a link inside of it.
 								-->
 								<!-- <li>
-									<a href="images/Astronomy.jpg">My CV</a>
+									<a href="images/am1.jpeg">My CV</a>
 								</li> -->
 							</ul>
 						</nav>
@@ -111,7 +111,7 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/am1.jpg" alt=""/>
+								<img src="images/am1.jpeg" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
