--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
 							</p>
 							<p>
 								<b>Education:</b> <br>
-								PhD in Physics, University of Notre Dame, 2016. <br>
-								MS in Physics, University of Notre Dame, 2014. <br>
-								BA in Physics, Reed College, 2011.
+								MS in Translational Biotechnology, University of Southern California, 2021. <br>
+								BE in Bio-engineering, Nanjing Agricultural University, 2015.
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=orcid%3A0000-0001-9440-6017&sort=date+desc">NASA ADS</a>
