--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p>
-								Contact MacKenzie Warren regarding their published work, outreach, or any other inquiries.
+								Contact Ke Wang regarding her published work, outreach, or any other inquiries.
 							</p>
 							<p>
-								<b>Email:</b> <br>  <a href="mailto:mlwarre4@ncsu.edu">mlwarre4@ncsu.edu</a>
+								<b>Email:</b> <br>  <a href="mailto:kwang558@usc.edu">kwang558@usc.edu</a>
 							</p>
 							<p>
-								<b>Address:</b> <br> Department of Physics <br> 2401 Stinson Dr <br> Raleigh, NC 27695
+								<b>Address:</b> <br> Los Angeles, CA 90007
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
