--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p>
-								Contact Ke Wang regarding her published work, outreach, or any other inquiries.
+								Contact Ke Wang regarding her published work or any other inquiries.
 							</p>
 							<p>
 								<b>Email:</b> <br>  <a href="mailto:kwang558@usc.edu">kwang558@usc.edu</a>
