--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p>
-								Contact Ke Wang regarding her published work or any other inquiries.
+								Contact Ke Wang regarding her published work or any other works.
 							</p>
 							<p>
 								<b>Email:</b> <br>  <a href="mailto:kwang558@usc.edu">kwang558@usc.edu</a>
@@ -273,7 +273,7 @@
 								</li>-->
 								<!-- The GitHub icon -->
 							<!---		<li>
-									<a href="https://github.com/mackenzie-warren" class="icon fa-github">
+									<a href="https://github.com/kechristywang" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>-->
