--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									University of Southern California <br> Nanjing Agricultural University
+									University of Southern California <br> Gan & Lee Pharmaceutical Ltd. <br> Nanjing Agricultural University
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
