--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 								BE in Bio-engineering, Nanjing Agricultural University, 2015.
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=orcid%3A0000-0001-9440-6017&sort=date+desc">NASA ADS</a>
+								<b>Publications:</b> <br>
+								Jing Peng, Ke Wang, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range, Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146, https://doi.org/10.1016/j.foodchem.2021.129811.
 							</p>
 						</article>
 
