--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 								<b>Research Interests:</b>
 								My research interests include theoretical nuclear and particle astrophysics.
 								Much of my work has centered around simulations of core-collapse supernovae and other high energy astrophysical events.
-								In particular, I am interested in computational modeling of high energy astrophysical phenomena; neutrino transport and interactions in hot, dense matter; dense nuclear matter in core-collapse supernovae and neutron stars; and thermonuclear burning and nucleosynthesis.
+								In particular, 
+								
+								I am interested in computational modeling of high energy astrophysical phenomena; neutrino transport and interactions in hot, dense matter; dense nuclear matter in core-collapse supernovae and neutron stars; and thermonuclear burning and nucleosynthesis.
 							</p>
 							<p>
 								I am currently a National Science Foundation Astronomy & Astrophysics Postdoctoral Fellow at North Carolina State University.
