--- a/index.html
+++ b/index.html
@@ -113,17 +113,12 @@
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
-								<!-- Items contained in <b> tags are bolded! -->
-								<b>Research Interests:</b>
-								My research interests include theoretical nuclear and particle astrophysics.
-								Much of my work has centered around simulations of core-collapse supernovae and other high energy astrophysical events.
-								In particular, 
-								
-								I am interested in computational modeling of high energy astrophysical phenomena; neutrino transport and interactions in hot, dense matter; dense nuclear matter in core-collapse supernovae and neutron stars; and thermonuclear burning and nucleosynthesis.
-							</p>
-							<p>
-								I am currently a National Science Foundation Astronomy & Astrophysics Postdoctoral Fellow at North Carolina State University.
-								I am incorporating neutrino flavor mixing into the FLASH supernova simulation framework to study neutrino flavor mixing in the core-collapse supernova environment.
+								During my undergraduate research career, I explored novel halogenase genes using the Luoyang soil libraries and constructed nondestructive examination models containing anthocyanins and water components based on optical property parameters. 
+								I worked in the R & D department of Gan & Lee Pharmaceutical Ltd. for two years. 
+								The main focus of the research is to develop methods for the detection of host cell proteins in products and the improvement of fermentation strains. 
+								I am currently a master's student in Translational Biotechnology at the University of Southern California. 
+								Based on my interest in bioinformatics, I joined the Mangul Lab to work on a project for  SARS-CoV-2 lineage detection in wastewater.
+
 							</p>
 							<p>
 								<b>Education:</b> <br>
