--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
+								<b>Research Interests:</b> <br>
 								During my undergraduate research career, I explored novel halogenase genes using the Luoyang soil libraries and constructed nondestructive examination models containing anthocyanins and water components based on optical property parameters. 
 								I worked in the R & D department of Gan & Lee Pharmaceutical Ltd. for two years. 
 								The main focus of the research is to develop methods for the detection of host cell proteins in products and the improvement of fermentation strains. 
@@ -127,7 +128,7 @@
 							</p>
 							<p>
 								<b>Publications:</b> <br>
-								Jing Peng, Ke Wang, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range, Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146, https://doi.org/10.1016/j.foodchem.2021.129811.
+								Jing Peng, <b>Ke Wang</b>, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range, Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146, https://doi.org/10.1016/j.foodchem.2021.129811.
 							</p>
 						</article>
 
