--- a/index.html
+++ b/index.html
@@ -139,18 +139,13 @@
 								<!---img src="images/pic02.jpg" alt=""/!--->
 							<!---/span!--->
 							<p>
-								I am interested in the role of neutrino and nuclear physics in core-collapse supernovae.
-								I have extensive experience in the development and application of general relativistic numerical hydrodynamics supernova models, including detailed neutrino transport.
+								<b>A rigorous benchmarking of methods for SARS-CoV-2 lineage detection in wastewater</b> <br>
+								Wastewater genomic surveillance (WGS) has been proven to detect pathogens across sewershed which is a good representation of the collective waste. 
+								There has been work using different bioinformatics tools to suggest possible ways to monitor SARS-CoV-2 variants and to predict variant abundances via computational approaches. 
+								This project focuses on benchmarking existing methods for lineage detection in wastewater samples containing SARS-CoV-2. 
 							</p>
 							<p>
-								<b>Neutrino flavor mixing in CCSNe</b><br>
-								It is well understood that core-collapse supernovae (CCSNe) result from the deaths of stars with masses M>8M⊙.
-								Yet the explosion mechanism of CCSNe has remained one of the biggest open questions in astrophysics.
-								With increasing computational power, simulations of the CCSN mechanism have increased in physical fidelity, now including realistic equations of state, general relativity, and neutrino transport, but also increased in computational precision with 3D simulations and increasing resolution.
-								However, there is a fundamental piece of physics that remains missing from most supernova codes: neutrino flavor mixing.
-								I am including the effects of neutrino flavor mixing in the FLASH supernova code.
-								Neutrino flavor mixing may drastically change predictions of the supernova neutrino spectrum and thus the observable outcomes of CCSNe.
-								I will produce the first simulations of CCSNe including neutrino oscillations and generate predictions of the impact of neutrino mixing on explodability, neutrino signal, and nucleosynthesis.
+								Here
 							</p>
 							<p>
 								<b>Multi-messenger signals from CCSNe</b><br>
