--- a/index.html
+++ b/index.html
@@ -139,10 +139,20 @@
 								<!---img src="images/pic02.jpg" alt=""/!--->
 							<!---/span!--->
 							<p>
-								<b>A rigorous benchmarking of methods for SARS-CoV-2 lineage detection in wastewater</b> <br>
+								<b>A Rigorous Bbenchmarking of Methods for SARS-CoV-2 Lineage Detection in Wastewater</b> <br>
 								Wastewater genomic surveillance (WGS) has been proven to detect pathogens across sewershed which is a good representation of the collective waste. 
 								There has been work using different bioinformatics tools to suggest possible ways to monitor SARS-CoV-2 variants and to predict variant abundances via computational approaches. 
 								This project focuses on benchmarking existing methods for lineage detection in wastewater samples containing SARS-CoV-2. 
+							</p>
+							
+							<p>
+								Warren, Couch, O'Connor, & Morozova (2020).  "Constraining properties of the next nearby core-collapse supernova with multi-messenger signals."
+								Submitted to Ap.J. <a href="https://arxiv.org/abs/1912.03328">arXiv:1912:03328</a>
+							</p>
+							<p>
+								Jing Peng, Ke Wang, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range, 
+								Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146. 
+								<a href="https://doi.org/10.1016/j.foodchem.2021.129811">arXiv:1912:03328</a> 
 							</p>
 							<p>
 								Here
