--- a/index.html
+++ b/index.html
@@ -236,25 +236,25 @@
 							-->
 							<ul class="icons">
 								<!-- The Twitter icon -->
-								<li>
+							<!---	<li>
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="https://twitter.com/astronomack" class="icon fa-twitter">
+									<a href="https://twitter.com/" class="icon fa-twitter">
 										<span class="label">Twitter</span>
 									</a>
-								</li>
+								</li>-->
 							<!---	<li>
 									<a href="#" class="icon fa-instagram">
 										<span class="label">Instagram</span>
 									</a>
 								</li>-->
 								<!-- The GitHub icon -->
-							<!---		<li>
+									<li>
 									<a href="https://github.com/kechristywang" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
-								</li>-->
+								</li>
 								<!-- The LinkedIn icon -->
 								<li>
 									<a href="https://www.linkedin.com/in/mackenziewarren/" class="icon fa-linkedin">
