--- a/index.html
+++ b/index.html
@@ -236,14 +236,15 @@
 							-->
 							<ul class="icons">
 								<!-- The Twitter icon -->
-							<!---	<li>
+								<li>
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="https://twitter.com/" class="icon fa-twitter">
+								<!---	<a href="https://twitter.com/" class="icon fa-twitter">
 										<span class="label">Twitter</span>
 									</a>
 								</li>-->
+							
 							<!---	<li>
 									<a href="#" class="icon fa-instagram">
 										<span class="label">Instagram</span>
