--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 								</li>
 								<!-- The LinkedIn icon -->
 								<li>
-									<a href="https://www.linkedin.com/in/mackenziewarren/" class="icon fa-linkedin">
+									<a href="https://www.linkedin.com/in/ke-wang-0bb987227/" class="icon fa-linkedin">
 										<span class="label">LinkedIn</span>
 									</a>
 								</li>
