--- a/index.html
+++ b/index.html
@@ -146,12 +146,7 @@
 							</p>
 							
 							<p>
-								Warren, Couch, O'Connor, & Morozova (2020).  "Constraining properties of the next nearby core-collapse supernova with multi-messenger signals."
-								Submitted to Ap.J. <a href="https://arxiv.org/abs/1912.03328">arXiv:1912:03328</a>
-							</p>
-							<p>
-								Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range<br>
-								Jing Peng, <b>Ke Wang</b>, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan
+								Jing Peng, <b>Ke Wang</b>, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range
 								<a href="https://doi.org/10.1016/j.foodchem.2021.129811">Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146. </a> 
 							</p>
 							<p>
