--- a/index.html
+++ b/index.html
@@ -139,13 +139,18 @@
 								<!---img src="images/pic02.jpg" alt=""/!--->
 							<!---/span!--->
 							<p>
-								<b>A Rigorous Bbenchmarking of Methods for SARS-CoV-2 Lineage Detection in Wastewater</b> <br>
+								<b>SARS-CoV-2 Detection in Wastewater</b> <br>
 								Wastewater genomic surveillance (WGS) has been proven to detect pathogens across sewershed which is a good representation of the collective waste. 
 								There has been work using different bioinformatics tools to suggest possible ways to monitor SARS-CoV-2 variants and to predict variant abundances via computational approaches. 
 								This project focuses on benchmarking existing methods for lineage detection in wastewater samples containing SARS-CoV-2. 
 							</p>
 							
 							<p>
+								<b>Rapid Detection of Purple Sweet Potato</b> <br>
+								Purple sweet potatoes provide a rich source of many nutrients, especially anthocyanins. 
+								We investigated the variation of optical absorption and scattering properties of purple potato during the drying process using a single integrating sphere system. 
+								Based on optical property parameters through statistical analysis, we constructed nondestructive examination models containing anthocyanins and water components.<br>
+								<br>
 								Jing Peng, <b>Ke Wang</b>, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range
 								<a href="https://doi.org/10.1016/j.foodchem.2021.129811">Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146. </a> 
 							</p>
