--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 							<p>
 								<b>Differential Gene Expression within Stage A Chronic Lymphocytic Leukemia</b> <br>
 								
-								TRGN 510
+								<font size ="1">TRGN 510</font>
 							</p>
 							<p>
 								<b>Rapid Detection of Purple Sweet Potato</b> <br>
