--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<!---img src="images/pic02.jpg" alt=""/!--->
 							<!---/span!--->
 							<p>
-								<b>SARS-CoV-2 Detection in Wastewater</b> <br>
+								<b><font size ="5">SARS-CoV-2 Detection in Wastewater</font></b> <br>
 								Wastewater genomic surveillance (WGS) has been proven to detect pathogens across sewershed which is a good representation of the collective waste. 
 								There has been work using different bioinformatics tools to suggest possible ways to monitor SARS-CoV-2 variants and to predict variant abundances via computational approaches. 
 								This project focuses on benchmarking existing methods for lineage detection in wastewater samples containing SARS-CoV-2. 
@@ -152,7 +152,7 @@
 							<p>
 								<b>Differential Gene Expression within Stage A Chronic Lymphocytic Leukemia</b> <br>
 								
-								<font size ="10">TRGN 510</font>
+								<font size ="6">TRGN 510</font>
 							</p>
 							<p>
 								<b>Rapid Detection of Purple Sweet Potato</b> <br>
