--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 								This project focuses on benchmarking existing methods for lineage detection in wastewater samples containing SARS-CoV-2. 
 							</p>
 							<p>
-								<b>Pridiction of infant states with Cardiotocography</b> <br>
+								<b><font size ="5">Pridiction of infant states with Cardiotocography</font></b> <br>
 								
 								TRGN 515
 							</p>
 							<p>
-								<b>Differential Gene Expression within Stage A Chronic Lymphocytic Leukemia</b> <br>
+								<b><font size ="5">Differential Gene Expression within Stage A CLL</font></b> <br>
 								
-								<font size ="6">TRGN 510</font>
+								TRGN 510
 							</p>
 							<p>
 								<b>Rapid Detection of Purple Sweet Potato</b> <br>
