--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 								<b><font size ="5">Differential Gene Expression within Stage A CLL</font></b> <br>
 								
 								TRGN 510
+								<figure>
+									<img src="images/CLL.png" style="width:60%">
+									<figcaption><font size="-1">Gene expression was divided into two clear groups based on gender rather than disease states. </font></figcaption>
+									
+								</figure>
 							</p>
 							<p>
 								<b>Rapid Detection of Purple Sweet Potato</b> <br>
