--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 								</figure>
 							</p>
 							<p>
-								<b>Rapid Detection of Purple Sweet Potato</b> <br>
+								<b><font size ="5">Rapid Detection of Purple Sweet Potato</font></b> <br>
 								Purple sweet potatoes provide a rich source of many nutrients, especially anthocyanins. 
 								We investigated the variation of optical absorption and scattering properties of purple potato during the drying process using a single integrating sphere system. 
 								Based on optical property parameters through statistical analysis, we constructed nondestructive examination models containing anthocyanins and water components.<br>
