--- a/index.html
+++ b/index.html
@@ -145,9 +145,15 @@
 								This project focuses on benchmarking existing methods for lineage detection in wastewater samples containing SARS-CoV-2. 
 							</p>
 							<p>
-								<b><font size ="5">Pridiction of infant states with Cardiotocography</font></b> <br>
-								
-								TRGN 515
+								<b><font size ="5">Pridiction of Fetal States with Cardiotocography</font></b> <br>
+								In TRGN 515 Advanced Human Genomic Analysis Methods, my final project predict three fetal states (nNormal, suspect, pathological) by using the random forest.
+								Cardiotocography is an essential indicator of fetal states. 
+								Earlier detection of a pathological fetus allows physicians to take action to prevent mortality. 
+								The results of machine learning models can inform obstetricians in determining the fetal states. 
+								The accuracy of fetal state prediction model using random forest can reach 0.958. 
+								More important features can give doctors some clues, although it cannot be used as a diagnosis for fetal states.
+								There are still aspects to be improved in this model. 
+								If more data about suspict group and pathological group can be added, the model can be improved.
 							</p>
 							<p>
 								<b><font size ="5">Differential Gene Expression within Stage A CLL</font></b> <br>
