--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							</p>
 							<p>
 								<b><font size ="5">Pridiction of Fetal States with Cardiotocography</font></b> <br>
-								In TRGN 515 Advanced Human Genomic Analysis Methods, my final project predict three fetal states (nNormal, suspect, pathological) by using the random forest.
+								In TRGN 515 Advanced Human Genomic Analysis Methods, my final project predict three fetal states (normal, suspect, pathological) by using the random forest.
 								Cardiotocography is an essential indicator of fetal states. 
 								Earlier detection of a pathological fetus allows physicians to take action to prevent mortality. 
 								The results of machine learning models can inform obstetricians in determining the fetal states. 
