--- a/index.html
+++ b/index.html
@@ -171,7 +171,12 @@
 								Purple sweet potatoes provide a rich source of many nutrients, especially anthocyanins. 
 								We investigated the variation of optical absorption and scattering properties of purple potato during the drying process using a single integrating sphere system. 
 								Based on optical property parameters through statistical analysis, we constructed nondestructive examination models containing anthocyanins and water components.<br>
-								
+								This study indicated the potential of using optical absorption and scattering properties measured by single integrating sphere technology to evaluate the quality of PSPs during drying process.
+								<figure>
+									<img src="images/PSP.png" style="width:80%">
+									<figcaption><font size="-1">Measured vs.predicted anthocyanin of purple sweet potatoes based on (I) μa spectra and (II)μs' spectra using SVM model in the range of 400-1050 nm;(B)
+									Measured vs.predicted moisture content of purple sweet potatoes based on (I) μa spectra and (II)μs' spectra using PLS model in the range of 400-1050nm</font></figcaption>
+								</figure>
 								Jing Peng, <b>Ke Wang</b>, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range,
 								<a href="https://doi.org/10.1016/j.foodchem.2021.129811">Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146. </a> 
 							</p>
