--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
 							</p>
 							<p>
 								<b><font size ="5">Host Cell Protein Detection Development</font></b> <br>
-								
+								Recombinant protein pharmaceutical products have a significant effect in the treatment of various human diseases, and the production of recombinant protein drugs is achieved by large-scale cultivation of host cells capable of expressing the product. 
+								During this process, a large number of non-product related host cell proteins (HCP) will be introduced into the production process. 
+								This project aims to develop a sensitive and accurate immunological method based on the principle of sandwich ELISA for the detection of HCP residues in insulin glargine intermediate products and drug substance, and provides effective data support for the process validation of insulin glargine, product release and other studies. 
+								Our assay can reflect the HCP concentration of insulin glargine intermediate sample and DS sample. It is valid, reliable, and objective for the testing of insulin products.
 							</p>
 							<p>
 								<b><font size ="5">E. coli Strain Optimization</font></b> <br>
