--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
 							</p>
 							<p>
 								<b><font size ="5">E. coli Strain Optimization</font></b> <br>
-								
+								Recombinant human insulin is mainly produced in E. coli. Host cell proteins (HCP) become impurities in the subsequent purification process. 
+								The goal of the project is to probe changes in HCP during fermentation by point mutation at designated locations in E. coli. 
 							</p>
 							
 						</article>
