--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							</p>
 							<p>
 								<b><font size ="5">Differential Gene Expression within Stage A CLL</font></b> <br>
-								In TRGN 510 Basic Foundations in Translational Biomedical Informatics, my final project compare differential gene expression in TCGA within progression and stable of stage A Chronic Lymphocytic Leukemia (CLL) using DeSEQ2.
+								In TRGN 510 Basic Foundations in Translational Biomedical Informatics, my final project compare differential gene expression in TCGA within progression and stable of stage A Chronic Lymphocytic Leukemia (CLL) using DESeq2.
 								The whole analysis process is run in the R environment.
 								The results showed that 117 genes exhibited significant expression differences between males and females.
 								However, these genes were associated with expression differences between males and females themselves and may not be associated with chronic lymphocytic leukemia.
