--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Ke_CV.pdf" target="_blank">Curriculum Vitae</a> <br> <a href="images/resume.pdf" target="_blank">Resume</a>
+									<a href="images/Ke_CV.pdf" target="_blank">Curriculum Vitae</a> <br> <a href="images/Ke_R.pdf" target="_blank">Resume</a>
 								</p>
 							</div>
 						</div>
