--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 								Our assay can reflect the HCP concentration of insulin glargine intermediate sample and DS sample. It is valid, reliable, and objective for the testing of insulin products.
 							</p>
 							<p>
-								<b><font size ="5">E. coli Strain Optimization</font></b> <br>
-								Recombinant human insulin is mainly produced in E. coli. Host cell proteins (HCP) become impurities in the subsequent purification process. 
-								The goal of the project is to probe changes in HCP during fermentation by point mutation at designated locations in E. coli. 
+								<b><font size ="5"><i>E. coli</i> Strain Optimization</font></b> <br>
+								Recombinant human insulin is mainly produced in <i>E. coli</i>. Host cell proteins (HCP) become impurities in the subsequent purification process. 
+								The goal of the project is to probe changes in HCP during fermentation by point mutation at designated locations in <i>E. coli</i>. 
 							</p>
 							
 						</article>
