--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 								This study indicated the potential of using optical absorption and scattering properties measured by single integrating sphere technology to evaluate the quality of PSPs during drying process.
 								<figure>
 									<img src="images/PSP.png" style="width:80%">
-									<figcaption><font size="-1">Measured vs. predicted anthocyanin of purple sweet potatoes based on (I) μ<sub>a</sub> spectra and (II) μ<sub>s</sub>' spectra using SVM model in the range of 400-1050 nm; (B)
+									<figcaption><font size="-1">Measured vs. predicted anthocyanin of purple sweet potatoes based on (I) μ<sub><font size="-1">a</font></sub> spectra and (II) μ<sub>s</sub>' spectra using SVM model in the range of 400-1050 nm; (B)
 									Measured vs. predicted moisture content of purple sweet potatoes based on (I) μ<sub>a</sub> spectra and (II) μ<sub>s</sub>' spectra using PLS model in the range of 400-1050 nm.</font></figcaption>
 								</figure>
 								Jing Peng, <b>Ke Wang</b>, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range,
