--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
 								Purple sweet potatoes provide a rich source of many nutrients, especially anthocyanins. 
 								We investigated the variation of optical absorption and scattering properties of purple potato during the drying process using a single integrating sphere system. 
 								Based on optical property parameters through statistical analysis, we constructed nondestructive examination models containing anthocyanins and water components. 
-								Compared with PLS models, better prediction of moisture and anthocyanins in PSPs were obtained based on SVM models using their optical properties, with R<sup>2</sup>p values of 0.866-0.917, and RPD of 2.626-3.190. 
+								Compared with PLS models, better prediction of moisture and anthocyanins in PSPs were obtained based on SVM models using their optical properties, with R<sup>2</sup>p values of 0.866 - 0.917, and RPD of 2.626-3.190. 
 								This study indicated the potential of using optical absorption and scattering properties measured by single integrating sphere technology to evaluate the quality of PSPs during drying process.
 								<figure>
 									<img src="images/PSP.png" style="width:80%">
-									<figcaption><font size="-1">Measured vs. predicted anthocyanin of purple sweet potatoes based on (I) μ<sub><font size="-2">a</font></sub> spectra and (II) μ<sub>s</sub>' spectra using SVM model in the range of 400-1050 nm; (B)
-									Measured vs. predicted moisture content of purple sweet potatoes based on (I) μ<sub>a</sub> spectra and (II) μ<sub>s</sub>' spectra using PLS model in the range of 400-1050 nm.</font></figcaption>
+									<figcaption><font size="-1">Measured vs. predicted anthocyanin of purple sweet potatoes based on (I) μ<sub><font size="-2">a</font></sub> spectra and (II) μ<sub><font size="-2">s</font></sub>' spectra using SVM model in the range of 400-1050 nm; (B)
+									Measured vs. predicted moisture content of purple sweet potatoes based on (I) μ<sub><font size="-2">a</font></sub> spectra and (II) μ<sub><font size="-2">s</font></sub>' spectra using PLS model in the range of 400-1050 nm.</font></figcaption>
 								</figure>
 								Jing Peng, <b>Ke Wang</b>, Chen Ma, Jiamei Long, Kang Tu, Leiqing Pan, Determination of anthocyanin and moisture content of purple sweet potatoes during the drying process by their optical properties in the 400–1050 nm range,
 								<a href="https://doi.org/10.1016/j.foodchem.2021.129811">Food Chemistry, Volume 359, 2021, 129811, ISSN 0308-8146. </a> 
