--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 								Purple sweet potatoes provide a rich source of many nutrients, especially anthocyanins. 
 								We investigated the variation of optical absorption and scattering properties of purple potato during the drying process using a single integrating sphere system. 
 								Based on optical property parameters through statistical analysis, we constructed nondestructive examination models containing anthocyanins and water components. 
-								Compared with PLS models, better prediction of moisture and anthocyanins in PSPs were obtained based on SVM models using their optical properties, with R<sup>2</sup>p values of 0.866 - 0.917, and RPD of 2.626-3.190. 
+								Compared with PLS models, better prediction of moisture and anthocyanins in PSPs were obtained based on SVM models using their optical properties, with R<sup>2</sup>p values of 0.866 - 0.917, and RPD of 2.626 - 3.190. 
 								This study indicated the potential of using optical absorption and scattering properties measured by single integrating sphere technology to evaluate the quality of PSPs during drying process.
 								<figure>
 									<img src="images/PSP.png" style="width:80%">
