--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
 								<b>Email:</b> <br>  <a href="mailto:kwang558@usc.edu">kwang558@usc.edu</a>
 							</p>
 							<p>
-								<b>Address:</b> <br> Los Angeles, CA 90007
+								<b>Address:</b> <br> Singapore
+							</p>
+							<p>
+								<b>Phone:</b> <br> +65 86466726
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
