--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p>
-								Contact Ke Wang regarding her published work or any other works.
+								Please contact me regarding my published work or any other works.
 							</p>
 							<p>
 								<b>Email:</b> <br>  <a href="mailto:kwang558@usc.edu">kwang558@usc.edu</a>
