--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 							</p>
 							<p>
 								<b>Education:</b> <br>
-								MS in Translational Biotechnology, University of Southern California, 2021. <br>
-								BE in Bio-engineering, Nanjing Agricultural University, 2015.
+								MS in Translational Biotechnology, University of Southern California, 2023. <br>
+								BE in Bio-engineering, Nanjing Agricultural University, 2019.
 							</p>
 							<p>
 								<b>Publications:</b> <br>
@@ -205,13 +205,13 @@
 								Please contact me regarding my published work or any other works.
 							</p>
 							<p>
-								<b>Email:</b> <br>  <a href="mailto:kwang558@usc.edu">kwang558@usc.edu</a>
+								<b>Email:</b> <br>  <a href="mailto:kechristywang@gmail.com">kechristywang@gmail.com</a>
 							</p>
 							<p>
-								<b>Address:</b> <br> Singapore
+								<b>Address:</b> <br> Beijing, China
 							</p>
 							<p>
-								<b>Phone:</b> <br> +65 86466726
+								<b>Phone:</b> <br> +86 135-2263-5607
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
